test/bad/5.cc
int main()
{
    double x, y, z;
    while (x == y)
    {
        int a = 5;
    }
    return a;
}